--- a/Contact.html
+++ b/Contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Styles.css/Index.css">
+    <link rel="stylesheet" href="Styles.css/Contact.css">
 </head>
 <body>
     <Nav></Nav>
-
+    
     <Footer></Footer>
 </body>
 </html>
