creacion de la rama

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="Styles.css/Index.css">
 </head>
 <body>
-    <Nav></Nav>
+    <Nav>
 
-    <Footer></Footer>
+    </Nav>
+
+    <Footer>
+        
+    </Footer>
 </body>
 </html>
