--- a/Contact.html
+++ b/Contact.html
@@ -18,28 +18,33 @@
 
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-transparent">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                            </li>
-                        </ul>
+                    <div class="d-flex flex-row" style= "width: 20%;">
+                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="120px" height="120px"></a>
                     </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="d-flex flex-row justify-content-start">
+                        <ul class="navbar-nav">
+                        <div class="d-flex flex-row justify-content-center" style="width: 90vw;">
+                            <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contacto</a>
+                            </li>
+                        </div>
+                    </ul>
+                    </div>
+                </div>
+                </div>
+                </div>
                 </div>
             </nav>
         </header>
