--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-expand-lg bg-body-transparent">
                 <div class="container-fluid">
                     <div class="d-flex flex-row" style= "width: 20%;">
-                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="120px" height="120px"></a>
+                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="100" height="100"></a>
                     </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,12 +44,40 @@
                     </div>
                 </div>
                 </div>
-                </div>
-                </div>
             </nav>
         </header>
-        <main>
 
+        <main>
+            <h1 class="titulo d-flex justify-content-center">Contáctanos</h1>
+            <div class="container">
+                    <form class="row">
+                        <div class="col-6">
+                            <label for="textInput">Nombre</label>
+                            <input type="text" class="form-control" id="textInput" placeholder="Juan">
+                        </div>
+
+                        <div class="col-6">
+                            <label for="textInput">Apellido</label>
+                            <input type="text" class="form-control" id="textInput" placeholder="Fernández">
+                        </div>
+
+                        <div class="col-12">
+                            <label for="emailInput" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="emailInput" placeholder="ejemplo@gmail.com">
+                        </div>
+
+                        <div class="col-10">
+                                <label for="mensaje" class="form-label">Escríbenos un mensaje</label>
+                                <textarea class="form-control" id="mensaje"></textarea>
+                        </div>
+
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary">
+                                Envíar
+                            </button>
+                        </div>
+                    </form>
+            </div>
         </main>
         <footer>
 
