se agregó un fondo de color tanto al navbar como al body

--- a/Contact.html
+++ b/Contact.html
@@ -30,13 +30,13 @@
                     <div class="d-flex flex-row justify-content-start">
                         <ul class="navbar-nav">
                         <div class="d-flex flex-row justify-content-center" style="width: 90vw;">
-                            <li class="nav-item">
+                            <li class="nav-item col-2">
                             <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Inicio</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item col-2">
                             <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item col-2">
                             <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contacto</a>
                             </li>
                         </div>
