se alinearon los iconos

--- a/Contact.html
+++ b/Contact.html
@@ -79,8 +79,16 @@
                     </form>
             </div>
         </main>
-        <footer>
-
+        <footer class="container">
+            <div class="piepagina d-flex justify-content-center row">
+                Todos los derechos reservados 2024 &copy;
+            <div class="iconos d-flex justify-content-evenly">
+                    <img src="assests/imagenes/facebook.svg" alt="" width="40" height="40">
+                    <img src="assests/imagenes/instagram.svg" alt="" width="40" height="40">
+                    <img src="assests/imagenes/twitter.svg" alt="" width="40" height="40">
+                </div>
+            </div>
+            </div>
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
