--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,61 @@
   </head>
   <body>
 
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              Parque Nacional Río Pilcomayo
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse co llapse show">
+            <div class="accordion-body">
+                <img src="Assets/IMG/panoramica_parque_nacional_pilcomayo.jpg" width="300" height="150"> <br>
+                <strong>Ubicación:</strong> Se encuentra en el noreste de la provincia de Formosa, en el departamento Pilcomayo, cerca de la frontera con Paraguay. <br>
+                <strong>Características:</strong> El Parque Nacional Río Pilcomayo protege una extensa área de humedales, bosques y esteros. Es atravesado por el río Pilcomayo, que forma parte de la frontera entre Argentina y Paraguay. <br>
+                <strong>Biodiversidad:</strong> El parque alberga una gran variedad de especies de flora y fauna, incluyendo aves, mamíferos, reptiles y peces. Es especialmente conocido por ser un importante refugio para aves acuáticas, con más de 300 especies registradas. <br>
+                <strong>Actividades:</strong> Entre las actividades que se pueden realizar en el Parque Nacional Río Pilcomayo se encuentran la observación de aves, paseos en lancha, caminatas, pesca deportiva y safaris fotográficos. <br>
+                <strong>Centro de Visitantes:</strong> El parque cuenta con un centro de visitantes donde los turistas pueden obtener información sobre las actividades y los senderos disponibles en el parque. <br>
+                <strong>Conservación:</strong> El Parque Nacional Río Pilcomayo fue creado con el objetivo de proteger la biodiversidad de la región y  promover el desarrollo del turismo sostenible.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+              Reserva Natural Formosa
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+            <div class="accordion-body">
+                <strong>Ubicación:</strong> Se encuentra a pocos kilómetros al este de la ciudad de Formosa, la capital provincial.
+                <strong>Características:</strong> La Reserva Natural Formosa protege una extensa área de bosques, esteros y humedales. Es el hogar de una gran variedad de especies de flora y fauna autóctonas. <br>
+                <strong>Biodiversidad:</strong> La reserva alberga una rica biodiversidad, incluyendo especies de aves, mamíferos, reptiles y peces. Es especialmente conocida por ser un importante refugio para aves migratorias. <br>
+                <strong>Actividades:</strong> Entre las actividades que se pueden realizar en la Reserva Natural Formosa se encuentran la observación de aves, paseos en lancha, caminatas, pesca deportiva y safaris fotográficos. <br>
+                <strong>Senderos:</strong> La reserva cuenta con varios senderos habilitados que permiten a los visitantes explorar la zona y disfrutar de la naturaleza. <br>
+                <strong>Centro de Interpretación:</strong> La reserva cuenta con un centro de interpretación donde los visitantes pueden obtener información sobre la flora, la fauna y la historia de la reserva. <br>
+                <strong>Conservación:</strong> La Reserva Natural Formosa fue creada con el objetivo de proteger la biodiversidad de la región y promover el desarrollo del turismo sostenible.
+
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+              El Bañado la Estrella
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+            <div class="accordion-body">
+                <strong>Ubicación:</strong> Se encuentra en el extremo noreste de la provincia de Formosa, en el departamento Pilcomayo, cerca de la localidad de Laguna Blanca. <br>
+                <strong>Características:</strong> El Bañado La Estrella es una extensa área de humedales que se caracteriza por su biodiversidad única. Es uno de los humedales más grandes de Argentina y una de las zonas más importantes para la conservación de la biodiversidad en el país. <br>
+                <strong>Flora y fauna:</strong> En el Bañado La Estrella se pueden encontrar una gran variedad de especies de flora y fauna, incluyendo aves, mamíferos, reptiles y peces. Es un lugar ideal para la observación de aves, con más de 350 especies registradas. <br>
+                <strong>Actividades:</strong> Entre las actividades que se pueden realizar en el Bañado La Estrella se encuentran la observación de aves, paseos en lancha, caminatas y pesca deportiva. <br>
+                <strong>Conservación:</strong> El Bañado La Estrella forma parte del Parque Nacional Río Pilcomayo y está protegido por su importancia para la conservación de la biodiversidad.
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
