se arreglo un problema del acordeon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse co llapse show">
             <div class="accordion-body">
-                <img src="Assets/IMG/panoramica_parque_nacional_pilcomayo.jpg" width="300" height="150"> <br>
+                <img src="Assets/IMG/Emblema_Parque_Nacional_Río_Pilcomayo.jpg" width="160" height="160" class="emblema">
+                <img src="Assets/IMG/panoramica_parque_nacional_pilcomayo.jpg" width="250" height="150"> <br>
                 <strong>Ubicación:</strong> Se encuentra en el noreste de la provincia de Formosa, en el departamento Pilcomayo, cerca de la frontera con Paraguay. <br>
                 <strong>Características:</strong> El Parque Nacional Río Pilcomayo protege una extensa área de humedales, bosques y esteros. Es atravesado por el río Pilcomayo, que forma parte de la frontera entre Argentina y Paraguay. <br>
                 <strong>Biodiversidad:</strong> El parque alberga una gran variedad de especies de flora y fauna, incluyendo aves, mamíferos, reptiles y peces. Es especialmente conocido por ser un importante refugio para aves acuáticas, con más de 300 especies registradas. <br>
@@ -36,7 +37,11 @@
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
             <div class="accordion-body">
-                <strong>Ubicación:</strong> Se encuentra a pocos kilómetros al este de la ciudad de Formosa, la capital provincial.
+
+                <img src="Assets/IMG/Emblema_Reserva_Natura_Formosa.jpg" width="160" height="160" class="emblema">
+                <img src="Assets/IMG/Foto_Reserva_Natural_Formosa.jpg" width="250" height="150"> <br>
+
+                <strong>Ubicación:</strong> Se encuentra a pocos kilómetros al este de la ciudad de Formosa, la capital provincial. <br>
                 <strong>Características:</strong> La Reserva Natural Formosa protege una extensa área de bosques, esteros y humedales. Es el hogar de una gran variedad de especies de flora y fauna autóctonas. <br>
                 <strong>Biodiversidad:</strong> La reserva alberga una rica biodiversidad, incluyendo especies de aves, mamíferos, reptiles y peces. Es especialmente conocida por ser un importante refugio para aves migratorias. <br>
                 <strong>Actividades:</strong> Entre las actividades que se pueden realizar en la Reserva Natural Formosa se encuentran la observación de aves, paseos en lancha, caminatas, pesca deportiva y safaris fotográficos. <br>
