Finalizado del acordeon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse co llapse show">
             <div class="accordion-body">
-                <img src="Assets/IMG/Emblema_Parque_Nacional_Río_Pilcomayo.jpg" width="160" height="160" class="emblema">
-                <img src="Assets/IMG/panoramica_parque_nacional_pilcomayo.jpg" width="250" height="150"> <br>
+                <div class="images">    
+                    <img src="Assets/IMG/Emblema_Parque_Nacional_Río_Pilcomayo.jpg" width="160" height="160" class="emblema">
+                    <img src="Assets/IMG/panoramica_parque_nacional_pilcomayo.jpg" width="250" height="150"> <br>
+                </div>
                 <strong>Ubicación:</strong> Se encuentra en el noreste de la provincia de Formosa, en el departamento Pilcomayo, cerca de la frontera con Paraguay. <br>
                 <strong>Características:</strong> El Parque Nacional Río Pilcomayo protege una extensa área de humedales, bosques y esteros. Es atravesado por el río Pilcomayo, que forma parte de la frontera entre Argentina y Paraguay. <br>
                 <strong>Biodiversidad:</strong> El parque alberga una gran variedad de especies de flora y fauna, incluyendo aves, mamíferos, reptiles y peces. Es especialmente conocido por ser un importante refugio para aves acuáticas, con más de 300 especies registradas. <br>
@@ -37,10 +39,10 @@
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
             <div class="accordion-body">
-
-                <img src="Assets/IMG/Emblema_Reserva_Natura_Formosa.jpg" width="160" height="160" class="emblema">
-                <img src="Assets/IMG/Foto_Reserva_Natural_Formosa.jpg" width="250" height="150"> <br>
-
+                <div class="images">
+                    <img src="Assets/IMG/Emblema_Reserva_Natura_Formosa.jpg" width="160" height="160" class="emblema">
+                    <img src="Assets/IMG/Foto_Reserva_Natural_Formosa.jpg" width="250" height="150"> <br>
+                </div>
                 <strong>Ubicación:</strong> Se encuentra a pocos kilómetros al este de la ciudad de Formosa, la capital provincial. <br>
                 <strong>Características:</strong> La Reserva Natural Formosa protege una extensa área de bosques, esteros y humedales. Es el hogar de una gran variedad de especies de flora y fauna autóctonas. <br>
                 <strong>Biodiversidad:</strong> La reserva alberga una rica biodiversidad, incluyendo especies de aves, mamíferos, reptiles y peces. Es especialmente conocida por ser un importante refugio para aves migratorias. <br>
@@ -60,6 +62,10 @@
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
             <div class="accordion-body">
+                <div class="images">
+                    <img src="Assets/IMG/BañadoLaEstrella.jpg" width="250" height="150">
+                    <img src="Assets/IMG/BañadoLaEstrellaCanoa.jpg" width="250" height="150"> <br>
+                </div>
                 <strong>Ubicación:</strong> Se encuentra en el extremo noreste de la provincia de Formosa, en el departamento Pilcomayo, cerca de la localidad de Laguna Blanca. <br>
                 <strong>Características:</strong> El Bañado La Estrella es una extensa área de humedales que se caracteriza por su biodiversidad única. Es uno de los humedales más grandes de Argentina y una de las zonas más importantes para la conservación de la biodiversidad en el país. <br>
                 <strong>Flora y fauna:</strong> En el Bañado La Estrella se pueden encontrar una gran variedad de especies de flora y fauna, incluyendo aves, mamíferos, reptiles y peces. Es un lugar ideal para la observación de aves, con más de 350 especies registradas. <br>
