--- a/Contact.html
+++ b/Contact.html
@@ -19,9 +19,9 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-body-transparent">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="d-flex flex-row" style= "width: 20%;">
-                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="100" height="100"></a>
+                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
                     </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,44 +48,52 @@
         </header>
 
         <main>
+            <div class="formulario container">
             <h1 class="titulo d-flex justify-content-center">Contáctanos</h1>
             <div class="container">
-                    <form class="row">
-                        <div class="col-6">
+                    <form class="row justify-content-center">
+                        <div class="col-4">
                             <label for="textInput">Nombre</label>
                             <input type="text" class="form-control" id="textInput" placeholder="Juan">
                         </div>
 
-                        <div class="col-6">
+                        <div class="col-4">
                             <label for="textInput">Apellido</label>
                             <input type="text" class="form-control" id="textInput" placeholder="Fernández">
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-8">
                             <label for="emailInput" class="form-label">Email</label>
                             <input type="email" class="form-control" id="emailInput" placeholder="ejemplo@gmail.com">
                         </div>
 
-                        <div class="col-10">
+                        <div class="col-8">
                                 <label for="mensaje" class="form-label">Escríbenos un mensaje</label>
-                                <textarea class="form-control" id="mensaje"></textarea>
+                                <textarea class="form-control" id="mensaje" placeholder="Me quiero comunicar contigo..."></textarea>
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-8 d-flex justify-content-end">
                             <button type="submit" class="btn btn-primary">
                                 Envíar
                             </button>
                         </div>
                     </form>
             </div>
+            </div>
         </main>
         <footer class="container">
             <div class="piepagina d-flex justify-content-center row">
                 Todos los derechos reservados 2024 &copy;
-            <div class="iconos d-flex justify-content-evenly">
-                    <img src="assests/imagenes/facebook.svg" alt="" width="40" height="40">
-                    <img src="assests/imagenes/instagram.svg" alt="" width="40" height="40">
-                    <img src="assests/imagenes/twitter.svg" alt="" width="40" height="40">
+            <div class="iconos d-flex justify-content-center">
+                <div class="icono-1">
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="assests/imagenes/facebook.svg" alt="" width="40" height="40" ></a>
+                </div>
+                <div class="icono-2">
+                    <a href="https://www.instagram.com/" target="_blank"><img src="assests/imagenes/instagram.svg" alt="" width="40" height="40"></a>
+                </div>
+                    
+                <div class="icono-3">
+                        <a href="https://twitter.com/?lang=es" target="_blank"><img src="assests/imagenes/twitter.svg" alt="" width="40" height="40"></a>
                 </div>
             </div>
             </div>
