--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="http://127.0.0.1:5500/about.html">Sobre Nosotros</a>
                             </li>
                             <li class="nav-item col-2">
-                            <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contacto</a>
+                            <a class="nav-link" href="http://127.0.0.1:5500/contact.html">Contactos</a>
                             </li>
                         </div>
                     </ul>
