--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Turismo Politecnico Formosa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css/Index.css">
   </head>
   <body>
+
+    <div class="container d-flex justify-content-center">
+        <div class="mh-100;" style="display: flex; width: 1000px; margin: 25px;;">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Assets/IMG/BañadoLaEstrellaRED.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="Assets/IMG/panoramica_parque_nacional_pilcomayoRED.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="Assets/IMG/Foto_Reserva_Natural_Formosa.jpg" class="d-block w-100">
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
@@ -75,16 +93,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
 
     <footer>
         <div class="lista-footer">
