--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-expand-lg bg-body-transparent">
                 <div class="container">
                     <div class="d-flex flex-row" style= "width: 20%;">
-                        <a class="logo"><img src="assests/imagenes/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
+                        <a class="logo"><img src="Assets/IMG/escudoformosa.png" alt="escudo de Formosa" width="50" height="50"></a>
                     </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -86,14 +86,14 @@
                 Todos los derechos reservados 2024 &copy;
             <div class="iconos d-flex justify-content-center">
                 <div class="icono-1">
-                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="assests/imagenes/facebook.svg" alt="" width="40" height="40" ></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="Assets/IMG/facebook.svg" alt="" width="40" height="40" ></a>
                 </div>
                 <div class="icono-2">
-                    <a href="https://www.instagram.com/" target="_blank"><img src="assests/imagenes/instagram.svg" alt="" width="40" height="40"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="Assets/IMG/instagram.svg" alt="" width="40" height="40"></a>
                 </div>
                     
                 <div class="icono-3">
-                        <a href="https://twitter.com/?lang=es" target="_blank"><img src="assests/imagenes/twitter.svg" alt="" width="40" height="40"></a>
+                        <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/IMG/twitter.svg" alt="" width="40" height="40"></a>
                 </div>
             </div>
             </div>
