--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Turismo Politecnico Formosa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles.css/Index.css">
+    <link rel="stylesheet" href="Styles.css/NavFooter.css">
   </head>
   <body>
 
